data/derived/comb/progs/unify/prog4697.ml.out
Characters 84-95:
  if not (lengthOfList digitsOfInt n = 1)
                       ^^^^^^^^^^^
Error: This expression has type int -> int list
       but an expression was expected of type 'a list
